Convert waitForDataStreamBackingIndices to return indices, to remove the need to retrieve the UUID